--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <strong>WELCOME!</strong></h2><br><br>
 <p>I am currently an ECEIE student.I like learning new things.This is my first website.
 </p><hr><br>
-<p>You can find me on instagram <a href="https://instagram.com/barsha.k_"></a></p>
+<p>You can find me on instagram <a href="https://instagram.com/barsha.k_">CLICK HERE.</a></p>
+
 
 </body>
 </html>
